[gd_scene load_steps=2 format=3 uid="uid://bl8v4bmgy3icx"]

[ext_resource type="Script" path="res://scenes/ui/options.gd" id="1_shoxu"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_shoxu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101961, 0.145098, 0.14902, 1)

[node name="MenuContainer" type="VBoxContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="MenuContainer"]
texture_filter = 1
layout_mode = 2
text = "Options"
horizontal_alignment = 1

[node name="VolumeLabel" type="Label" parent="MenuContainer"]
layout_mode = 2
text = "Master Volume: 50"

[node name="VolumeSlider" type="HSlider" parent="MenuContainer"]
layout_mode = 2
value = 50.0

[node name="BackButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Back"

[connection signal="value_changed" from="MenuContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="MenuContainer/BackButton" to="." method="_on_back_button_pressed"]
